src/objects/ByPassValidationRules__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Created for: Nokia Portugal COE | Validation Rules Logic Bypass</description>
    <fields>
        <fullName>AccountValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_WorkgroupValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CH_WorkgroupValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CH_Workgroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EventValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_RegistrationValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event_RegistrationValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SessionValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SessionValidation</label>
        <type>Checkbox</type>
    </fields>
    <label>ByPassValidationRules</label>
</CustomObject>